@@ -72,8 +72,8 @@ for k = 1:length(pfalgs)
     zip_w = [0 1 0];
     mpopt = mpoption(mpopt, 'exp.sys_wide_zip_loads', struct('pw', zip_w, 'qw', zip_w));
     r = runpf(mpc, mpopt);
-    [tPd, tQd] = total_load(r.bus, r.gen, 'bus', [], mpopt);
-    % [tPd, tQd] = total_load(r.bus, r.gen, 'bus');
+    [tPd, tQd] = total_load(r, 'bus', [], mpopt);
+    % [tPd, tQd] = total_load(r, 'bus');
     mpc1 = mpc;
     mpc1.bus(:, PD) = mpc1.bus(:, PD) .* r.bus(:, VM);
     mpc1.bus(:, QD) = mpc1.bus(:, QD) .* r.bus(:, VM);
@@ -109,7 +109,7 @@ for k = 1:length(pfalgs)
     zip_w = [0.1 0.4 0.5];
     mpopt = mpoption(mpopt, 'exp.sys_wide_zip_loads.pw', zip_w);
     r = runpf(mpc, mpopt);
-    [tPd, tQd] = total_load(r.bus, r.gen, 'bus', [], mpopt);
+    [tPd, tQd] = total_load(r, 'bus', [], mpopt);
     mpc1 = mpc;
     Vm = r.bus(:, VM);
     scale = [Vm.^0 Vm Vm.^2] * zip_w';
@@ -148,8 +148,8 @@ t = 'OPF - constant current only : ';
 zip_w = [0 1 0];
 mpopt = mpoption(mpopt, 'exp.sys_wide_zip_loads.pw', zip_w);
 r = runopf(mpc, mpopt);
-[tPd, tQd] = total_load(r.bus, r.gen, 'bus', [], mpopt);
-% [tPd, tQd] = total_load(r.bus, r.gen, 'bus');
+[tPd, tQd] = total_load(r, 'bus', [], mpopt);
+% [tPd, tQd] = total_load(r, 'bus');
 mpc1 = mpc;
 mpc1.bus(:, PD) = mpc1.bus(:, PD) .* r.bus(:, VM);
 mpc1.bus(:, QD) = mpc1.bus(:, QD) .* r.bus(:, VM);
@@ -190,7 +190,7 @@ t = 'OPF - combo ZIP loads : ';
 zip_w = [0.1 0.4 0.5];
 mpopt = mpoption(mpopt, 'exp.sys_wide_zip_loads.pw', zip_w);
 r = runopf(mpc, mpopt);
-[tPd, tQd] = total_load(r.bus, r.gen, 'bus', [], mpopt);
+[tPd, tQd] = total_load(r, 'bus', [], mpopt);
 mpc1 = mpc;
 Vm = r.bus(:, VM);
 scale = [Vm.^0 Vm Vm.^2] * zip_w';
@@ -262,7 +262,7 @@ for k = 1:length(cpfparm)
     mpopt = mpoption(mpopt, 'exp.sys_wide_zip_loads.pw', zip_w);
     rb = runpf(mpcb, mpopt);
     r = runcpf(mpcb, mpct, mpopt);
-    [tPd, tQd] = total_load(r.bus, r.gen, 'bus', [], mpopt);
+    [tPd, tQd] = total_load(r, 'bus', [], mpopt);
     mpc1b = mpcb;
     mpc1b.bus(:, PD) = mpc1b.bus(:, PD) .* rb.bus(:, VM);
     mpc1b.bus(:, QD) = mpc1b.bus(:, QD) .* rb.bus(:, VM);
@@ -286,7 +286,7 @@ for k = 1:length(cpfparm)
     mpopt = mpoption(mpopt, 'exp.sys_wide_zip_loads.pw', zip_w);
     rb = runpf(mpcb, mpopt);
     r = runcpf(mpcb, mpct, mpopt);
-    [tPd, tQd] = total_load(r.bus, r.gen, 'bus', [], mpopt);
+    [tPd, tQd] = total_load(r, 'bus', [], mpopt);
     mpc1b = mpcb;
     mpc1b.bus(:, PD) = mpc1b.bus(:, PD) .* rb.bus(:, VM).^2;
     mpc1b.bus(:, QD) = mpc1b.bus(:, QD) .* rb.bus(:, VM).^2;
@@ -310,7 +310,7 @@ for k = 1:length(cpfparm)
     mpopt = mpoption(mpopt, 'exp.sys_wide_zip_loads.pw', zip_w);
     rb = runpf(mpcb, mpopt);
     r = runcpf(mpcb, mpct, mpopt);
-    [tPd, tQd] = total_load(r.bus, r.gen, 'bus', [], mpopt);
+    [tPd, tQd] = total_load(r, 'bus', [], mpopt);
     Vm = abs(rb.bus(:, VM));
     scaleb = [Vm.^0 Vm Vm.^2] * zip_w';
     Vm = abs(r.bus(:, VM));
